<resources>
    <!-- General Strings -->
    <string name="app_name">IOU</string>
    <string name="group_name">name</string>
    <string name="main_title">\'s Groups</string>
    <string name="add_group_button">Add group</string>
    <string name="calculate_IOU_button">Calculate IOU</string>
    <string name="pay_back_button">Pay Back</string>
    <string name="submit_group">New Group</string>
    <string name="input_group_name">Group Name:</string>
    <string name="input_group_description">Group Description:</string>
    <string name="input_users">Users:</string>
    <string name="server_client_id">268915512812-543nhf63onu2iaa4c2nom1v8a70tmcp4.apps.googleusercontent.com</string>

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- Add Group Activity -->
    <string name="user_does_not_exist_title">User does not exist!</string>
    <string name="user_does_not_exist_message">Please check your spelling and try again. Remember the user must have logged in before to be added to a group.</string>
    <string name="user_already_exists_title">User already exists!</string>
    <string name="user_already_exists_message">You have already added this user to the group.</string>

    <!-- User Bills-->
    <string name="user_bills_title">%1$s\'s Transactions</string>
    <string name="user_bills_regular_empty">No regular bills!</string>
    <string name="user_bills_payback_empty">No IOUs!</string>
    <string name="user_bills_regular_full">Regular Bills:</string>
    <string name="user_bills_payback_full">IOUs:</string>

    <!-- View Bill -->
    <string name="view_bill_description">Description: %1$s</string>
    <string name="view_bill_user">Send User: %1$s</string>
    <string name="view_bill_receiver_user">Receiver User: %1$s</string>
    <string name="view_bill_cost">Cost: %1$f</string>

    <!-- View Group Adapter -->
    <string name="money_owed_adapter">$%1$f</string>

    <!-- View Groups -->
    <string name="view_groups_title">%1$s\'s Groups</string>

    <!-- Calculate IOU -->
    <string name="calculate_iou_title">IOU</string>
    <string name="calculate_iou_empty_owe_list">No one owes anything!</string>


    <!-- Database retrieval -->
    <string name="user_email_field">email</string>
    <string name="group_id_field">groupID</string>
    <string name="bill_id_field">billID</string>


</resources>
